--- a/page/templates/base.html
+++ b/page/templates/base.html
@@ -22,6 +22,7 @@
         }
     </script>
     {% block jqueryscript %}{% endblock %}
+    {% block noscript %}{% endblock %}
 </head>
 <body>
 {#    <h1>Base.html</h1><hr>#}
