--- a/page/templates/home.html
+++ b/page/templates/home.html
@@ -14,9 +14,6 @@
 
 {% block content%}
 <body class="is-preload">
-    <a href="{%url 'login'%}" id="login">로그인</a>
-    <a href="{%url 'homeworklist'%}" id="homeworklist">과제 제출</a>
-    <a href="{%url 'QnA'%}" id="QnA">Q&A</a>
     <a href="{%url 'parallax'%}" id="parallax">testing page</a>
     
 		<body class="is-preload">
@@ -56,18 +53,14 @@
 					<div class="row gtr-150">
 						<div class="col-6 col-12-medium">
 							<ul class="major-icons">
-								<li><span class="icon solid style1 major fa-code"></span></li>
-								<li><span class="icon solid style2 major fa-code"></span></li>
-								<li><span class="icon solid style3 major fa-camera-retro"></span></li>
-								<li><span class="icon solid style4 major fa-cog"></span></li>
-								<li><span class="icon solid style5 major fa-desktop"></span></li>
-								<li><span class="icon solid style6 major fa-calendar"></span></li>
-								<li><i class="fab fa-python"></i></li>
-								<li><i class="fab fa-js"></i></li>
-								<li><i class="fab fa-html5"></i></li>
-								<li><i class="fab fa-git-alt"></i></li>
-								<li><i class="fab fa-aws"></i></li>
-								<li><i class="fab fa-book"></i></li>
+								<li><span class="icon brands major fab fa-python"></span></li>
+								<li><span class="icon solid style2 major fas fa-book"></span></li>
+								<li><span class="icon brands html5 major fab fa-html5"></span></li>
+								<li><span class="icon brands css3 major fab fa-css3-alt"></span></li>
+								<li><span class="icon brands bootstrap major fab fa-bootstrap"></span></li>
+								<li><span class="icon brands js major fab fa-js"></span></li>
+								<li><span class="icon brands major fab fa-git-alt"></span></li>
+								<li><span class="icon brands major fab fa-aws"></span></li>
 							</ul>
 						</div>
 						<div class="col-6 col-12-medium">
@@ -75,12 +68,14 @@
 								<h2>커리큘럼</h2>
 							</header>
 							<p>멋쟁이사자처럼에서는 웹 서비스 런칭을 목표로 프로그래밍 및 창업 교육을 함께 진행합니다. 컴퓨터 비전공자도 쉽게 접근할 수 있는 Python을 중심으로 프로그래밍을 배우며, Django를 활용한 웹 페이지 개발을 진행하고 있습니다.
-								<li>Front-End : HTML5, CSS3, BootStrap, JavaScript(예정)</li>
+								<li>Front-End : HTML5, CSS3, BootStrap / JavaScript(예정)</li>
 								<li>Back-End : Django</li>
 								<li>Programming Language : Python</li>
+								<li>Cooperation Tool : Github</li>
+								<li>Server Deployment : AWS</li>
 							</p>
-							<p>또한, 서비스 기획을 위해 팀별로 아이디어를 구체화시키고 Adobe XD를 활용하여 UI/UX를 설계하는 방법을 배우게 됩니다. 다른 대학교와 함께 교류하며 아이디어 공유를 위한 연합 세션을 진행하고 있습니다. </p>
-							<p>커리큘럼</p>
+							<p>실제 서비스 기획을 위해 팀 단위로 프로젝트를 진행하게 됩니다. 서비스 아이디어를 구체화시키고, Adobe XD를 활용하여 UI/UX를 설계하는 방법을 배우게 됩니다. 또한 멋쟁이사자처럼 소속의 대학교들과 함께 교류하며 아이디어 공유를 위한 연합 세션을 진행하고 있습니다. </p>
+							<p>더 나아가 스타트업 준비를 위해 구체적인 수익 모델 구축 및 회사 운영 방법을 배우고, 다양한 프로젝트 경험을 통해 경쟁력 있는 개발자를 양성하는 것을 목표로 하고 있습니다. </p>
 						</div>
 					</div>
 				</div>
