--- a/page/templates/parallax.html
+++ b/page/templates/parallax.html
@@ -53,7 +53,7 @@
 							<ul class="major-icons">
 								<li><span class="icon solid style1 major fa-code"></span></li>
 								<li><span class="icon solid style2 major fab fa-book"></span></li>
-								<li><span class="icon solid style3 major fas fa-js"></span></li>
+								<li><span class="icon solid style3 major fab fa-python"></span></li>
 								<li><span class="icon solid style4 major fab fa-python"></span></li>
 								<li><span class="icon solid style5 major fas fa-aws"></span></li>
 								<li><span class="icon solid style6 major fab fa-html5"></span></li>
