fixed homework section introduction

--- a/page/templates/home.html
+++ b/page/templates/home.html
@@ -82,7 +82,7 @@
             <header class="major">
                 <h2>페이지 둘러보기</h2>
             </header>
-            <p>멋쟁이사자처럼은 무한한 가능성의 꿈을 믿습니다.</p>
+            <p>멋쟁이사자처럼은 무한한 가능성을 믿습니다.</p>
             <div class="row gtr-150">
                 <div class="col-4 col-12-medium">
                     <span class="image fit"><img src="{% static 'page/images/members.jpg' %}" alt="" /></span>
