Fixed Curriculum Content in "home.html"

--- a/page/templates/home.html
+++ b/page/templates/home.html
@@ -33,7 +33,7 @@
                     <header class="major">
                         <h2>ABOUT US</h2>
                     </header>
-                    <p> <a href="https://likelion.net/" target="_blank" > 멋쟁이사자처럼</a>은 컴퓨터 비전공자들도 프로그래밍을 할 수 있도록 교육하는 전국 대학 연합 동아리입니다. "내 아이디어를 내 손으로 직접 실현한다."는 목표를 갖고 온/오프라인 강의을 통한 체계적인 프로그래밍을 교육을 진행합니다. 열정과 아이디어만 있다면 누구나 참여 가능한 <u>멋쟁이사자처럼</u>에서 당신의 꿈을 이루어 보세요.  </p>
+                    <p> <a href="https://likelion.net/" target="_blank" > 멋쟁이사자처럼</a>은 컴퓨터 비전공자들도 프로그래밍을 할 수 있도록 교육하는 전국 대학 연합 동아리입니다. "내 아이디어를 내 손으로 직접 실현한다."는 목표를 갖고 온/오프라인 강의을 통한 체계적인 프로그래밍을 교육을 진행합니다. 열정과 아이디어만 있다면 누구나 참여 가능한 멋쟁이사자처럼에서 당신의 꿈을 이루어 보세요.  </p>
                 </div>
                 <div class="col-6 col-12-medium imp-medium">
                     <span class="image fit"><img src="{% static 'page/images/likelion.png' %}" alt="" /></span>
@@ -66,7 +66,8 @@
 								<li>Front-End : HTML5, CSS3, BootStrap / JavaScript(예정)</li>
 								<li>Back-End : Django</li>
 								<li>Programming Language : Python</li>
-								<li>Cooperation Tool : Github</li>
+                                <li>Source Code Management : Github</li>
+                                <li>Communication Tool : Swit</li>
 								<li>Server Deployment : AWS</li>
 							</p>
 							<p>실제 서비스 기획을 위해 팀 단위로 프로젝트를 진행하게 됩니다. 서비스 아이디어를 구체화시키고, Adobe XD를 활용하여 UI/UX를 설계하는 방법을 배우게 됩니다. 또한 멋쟁이사자처럼 소속의 대학교들과 함께 교류하며 아이디어 공유를 위한 연합 세션을 진행하고 있습니다. </p>
