--- a/homework/templates/edit.html
+++ b/homework/templates/edit.html
@@ -18,6 +18,8 @@
         <h3>과제 내용</h3>
         <textarea name="content" cols="50" rows="10">{{post.content}}</textarea>
         <br>
+        <input type="file" name="post_file">
+        
         <input type="submit" value="수정">
 
     </form>
