--- a/homework/templates/homeworklist.html
+++ b/homework/templates/homeworklist.html
@@ -14,7 +14,7 @@
     <h1>과제 제출</h1><br>
 
 
-    <a href="{%url 'new'%}" id="new">제출하기</a><br><br>
+    <a href="{%url 'homeworknew'%}" id="homeworknew">제출하기</a><br><br>
     
     {% for post in posts.all reversed %}
     <a href="{%url 'detail' post.id %}">{{post.title}}</a>
