--- a/homework/templates/edit.html
+++ b/homework/templates/edit.html
@@ -11,6 +11,7 @@
 {% block content%}
 <body>
     <h2 style="color: red;">과제 수정하기</h2><br>
+    {{post.author}}
     <form action="{% url 'edit' post.id %}" method="POST" enctype="multipart/form-data">
         {% csrf_token %}
         <h3>과제 제목</h3>
