--- a/homework/templates/edit.html
+++ b/homework/templates/edit.html
@@ -21,11 +21,15 @@
         <br>
         <input type="file" name="post_file">
         
-        <input type="submit" value="수정">
+        <input type="submit" value="수정" onclick="submit_btn()">
 
     </form>
 
-
+    <script>
+        function submit_btn(){
+            alert("과제 수정이 완료되었습니다.")
+        }
+</script>
 
    
 </body>
