--- a/homework/templates/noticeedit.html
+++ b/homework/templates/noticeedit.html
@@ -21,9 +21,15 @@
         <br>
         <input type="file" name="notice_file">
         
-        <input type="submit" value="수정">
+        <input type="submit" value="수정" onclick="submit_btn()">
 
     </form>
+
+    <script>
+        function submit_btn(){
+            alert("공지가 수정되었습니다.")
+        }
+</script>
 
 
 
