--- a/homework/templates/noticedetail.html
+++ b/homework/templates/noticedetail.html
@@ -6,7 +6,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Likelion Camp</title>
+    {% block title %}Likelion Camp{% endblock %}
 </head>
 {% block content%}
 <body>
