--- a/page/static/page/css/home.css
+++ b/page/static/page/css/home.css
@@ -1,5 +1,8 @@
 @import url("fontawesome-all.min.css");
 @import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,300italic,400,400italic");
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Noto+Sans+JP&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@500&display=swap");
 
 /*
 	Photon by HTML5 UP
@@ -119,6 +122,12 @@ input, select, textarea {
 			border-bottom-color: transparent !important;
 			color: #6bd4c8;
 		}
+
+	a.nav-item, a.navbar-brand {
+		color:rgb(180, 179, 179);
+		font-family: 'Roboto', sans-serif;
+		border-bottom: 0px #666;
+	}
 
 	strong, b {
 		color: #555;
