--- a/homework/templates/noticedetail.html
+++ b/homework/templates/noticedetail.html
@@ -6,25 +6,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    {% block link %}{% static 'homework/css/noticedetail.css' %}{% endblock %}
     {% block title %}Likelion Camp{% endblock %}
 </head>
 {% block content%}
 <body>
-    
-    <h2>공지사항 제목</h2>{{notice.title}}<br>
-    
-    <h2>공지사항 내용</h2>{{notice.content}}<br>
-    {{post.author}}
-    
-    {% if notice.notice_file.url != None %}
-    <div>첨부파일 다운로드<a href="{{ notice.notice_file.url }}" download="">{{ notice.notice_file }}</a> </div>
+    <header class="main-header">
+        <div class="header-inner">
+            <h1>공지사항</h1>
+        </div>
+    </header>
+    <div class="content">
+        <h3>〖 제목 〗</h3>  
+        {{notice.title}}
+        <h3>〖 내용 〗</h3>
+        {{notice.content}}
+        <br>
+        {% if notice.notice_file.url != None %}
+    <div>첨부파일 다운로드<a href="{{ notice.notice_file.url }}" download="" style="color : rgba(255,255,255,.8);">{{ notice.notice_file }}</a> </div>
     {% endif %}
-   
-    {% if notice.author == user %}
-    <a href="{% url 'noticeedit' notice.id %}" >수정</a>
-    <a href="{% url 'noticedelete' notice.id %}">삭제</a>
-    {% endif %}
+   <div class="box">
+        {% if notice.author == user %}
+        <a href="{% url 'noticeedit' notice.id %}" style="color : rgba(255,255,255,.8); border: 1px solid rgba(255,255,255,.8);">&nbsp수정&nbsp</a>&nbsp&nbsp&nbsp
+        <a href="{% url 'noticedelete' notice.id %}" style="color : rgba(255,255,255,.8); border: 1px solid rgba(255,255,255,.8);">&nbsp삭제&nbsp</a>
+        {% endif %}
+   </div>
+
     
+    </div>  
 </body>
 {% endblock %}
 
