--- a/homework/templates/noticenew.html
+++ b/homework/templates/noticenew.html
@@ -6,22 +6,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    {% block link %}{% static 'homework/css/noticenew.css' %}{% endblock %}
     {% block title %}Likelion Camp{% endblock %}
 </head>
 {% block content%}
 <body>
-    <h2 style="color: red;">공지사항 추가</h2><br>
-    {{user.name}}
-    <form action="{% url 'noticenew' %}" method="POST" enctype="multipart/form-data">
-        {% csrf_token %}
-        <h3>제목</h3>
-        <input type="text" name='title'>
-        <h3>내용</h3>
-        <textarea name="content" cols="50" rows="10"></textarea>
-        <br>
-        <input type="file" name="notice_file">
-        <input type="submit" value="등록" onclick="submit_btn()">
-    </form>
+    <header class="main-header">
+        <div class="header-inner">
+            <h1>공지사항 추가</h1>
+        </div>
+    </header>
+    <div class="content">
+        <form action="{% url 'noticenew' %}" method="POST" enctype="multipart/form-data">
+            {% csrf_token %}
+            <h3>〖 제목 〗</h3>
+            <input type="text" name='title' class="title">
+            <h3>〖 내용 〗</h3>
+            <textarea name="content" cols="50" rows="10"></textarea>
+            <br>
+            <input type="file" name="notice_file">
+            <input type="submit" class="submit" value="등록" onclick="submit_btn()">
+        </form>
+    </div>
     <script>
         function submit_btn(){
             alert("공지가 등록되었습니다.")
