--- a/homework/static/homework/css/edit.css
+++ b/homework/static/homework/css/edit.css
@@ -1,5 +1,4 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@500&display=swap');
-
 * {
     box-sizing: border-box;
   }
@@ -39,6 +38,7 @@
     margin: 0 auto 9rem;
     margin-top: 30px;
   }
+
   h3 {
     font-size: 20px;
     line-height: 1.2;
@@ -46,7 +46,23 @@
     margin-top: 3rem;
     color: rgba(255,255,255,.8);
   }
-div.box{
-    margin-top: 30px;
-    margin-left: calc(100%/1.2);
-}
+
+  textarea{
+      border: 1px solid rgba(255,255,255,.8);
+      background-color: rgb(253, 161, 22);
+      margin-bottom: 5px;
+  }
+  input.title{
+    border: 1px solid rgba(255,255,255,.8);
+    background-color: rgb(253, 161, 22);
+    color: black;
+  }
+  input.submit{
+    border: 1px solid rgba(255,255,255,.8);
+    background-color: rgb(253, 161, 22);
+    color : rgba(255,255,255,.8);
+    margin-left: calc(100%/12);
+  }
+  input{
+    color : rgba(255,255,255,.8);
+  }
