--- a/homework/static/homework/css/homeworknew.css
+++ b/homework/static/homework/css/homeworknew.css
@@ -46,7 +46,19 @@
     margin-top: 3rem;
     color: rgba(255,255,255,.8);
   }
-div.box{
-    margin-top: 30px;
-    margin-left: calc(100%/1.2);
+  input.submit{
+    border: 1px solid rgba(255,255,255,.8);
+    background-color: rgb(253, 161, 22);
+    color : rgba(255,255,255,.8);
+    margin-left: calc(100%/12);
+  }
+  textarea{
+    border: 1px solid rgba(255,255,255,.8);
+    background-color: rgb(253, 161, 22);
+    margin-bottom: 5px;
 }
+input.title{
+    border: 1px solid rgba(255,255,255,.8);
+    background-color: rgb(253, 161, 22);
+    color: black;
+  }
