--- a/homework/templates/detail.html
+++ b/homework/templates/detail.html
@@ -6,24 +6,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    {% block link %}{% static 'homework/css/detail.css' %}{% endblock %}
     {% block title %}Likelion Camp{% endblock %}
 </head>
 {% block content%}
 <body>
-    
-    <h2>과제 제목</h2>{{post.title}}<br>
-    
-    <h2>과제 내용</h2>{{post.content}}<br>
-    {{post.author}}
-    
+    <header class="main-header">
+        <div class="header-inner">
+            <h1>{{post.author}}님의 과제제출</h1>
+    </header>
+    <div class="content">
+        <h3>〖 제목 〗</h3>  
+        {{post.title}}
+        <h3>〖 내용 〗</h3>
+        {{post.content}}
+        <br>
     {% if post.post_file.url != None %}
-    <div>첨부파일 다운로드<a href="{{ post.post_file.url }}" download="">{{ post.post_file }}</a> </div>
+    <div style="margin-top: 10px;"><a href="{{ post.post_file.url }}" download="" style="color : rgba(255,255,255,.8);">{{ post.post_file }}</a> </div>
     {% endif %}
-   
+    <div class="box">
     {% if post.author == user %}
-    <a href="{% url 'edit' post.id %}" >수정</a>
-    <a href="{% url 'delete' post.id %}">삭제</a>
+    <a href="{% url 'edit' post.id %}" style="color : rgba(255,255,255,.8); border: 1px solid rgba(255,255,255,.8);">&nbsp수정&nbsp</a>
+    &nbsp&nbsp&nbsp<a href="{% url 'delete' post.id %}" style="color : rgba(255,255,255,.8); border: 1px solid rgba(255,255,255,.8);">&nbsp삭제&nbsp</a>
     {% endif %}
+    </div>
     
 </body>
 {% endblock %}
